--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "3d-react-carousal": "^4.0.2",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
@@ -20,6 +19,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "3d-react-carousal": "^4.0.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-intl": "^5.20.10",
+    "react-multi-carousel": "^2.8.0",
     "react-pro-sidebar": "^0.6.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.3.0",
